# litelemetry

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  bacon.toml  build.rs  compose.standalone.yml  compose.yml  renovate.json5
.github/actions/test/: action.yml
.github/tests/: test_release_workflow.py
.github/workflows/: build-and-push.yml  ci.yml  pr-image.yml
docker/postgres/initdb/: 001-init.sql
docker/redis/: seed.sh
scripts/: run-local-with-bacon.sh
skills/litelemetry-api/: SKILL.md
skills/litelemetry-api/examples/: README.md  alerts.list.json  api-keys.create.json  api-keys.list.json  dashboards.list.json  error-groups.list.json  query.response.json  service-map.json  slos.list.json  slow-queries.json  traces.search.json  traces.waterfall.json  viewers.list.json
skills/litelemetry-api/reference/: alerts.md  anomaly.md  api-keys.md  apm.md  attributes.md  auth.md  dashboards.md  endpoints.md  misc.md  query.md  slos.md  traces.md  viewers.md
skills/litelemetry-api/scripts/: bootstrap.sh  litelemetry.sh
src/: api_auth.rs  grpc.rs  lib.rs  main.rs  otlp_proto.rs  server.rs
src/alerts/: evaluator.rs  mod.rs
src/anomaly/: mod.rs  nodata.rs  zscore.rs
src/apm/: error_groups.rs  exemplars.rs  mod.rs  service_map.rs  slow_query.rs  trace_search.rs  waterfall.rs
src/domain/: alert.rs  api_key.rs  dashboard.rs  incident.rs  mod.rs  slo.rs  telemetry.rs  viewer.rs
src/ingest/: decode.rs  mod.rs  normalize.rs  otlp_http.rs  otlp_pb.rs
src/notifications/: dispatcher.rs  mod.rs  webhook.rs
src/query/: ast.rs  executor.rs  mod.rs  parser.rs
src/slo/: calculator.rs  mod.rs
src/storage/: alert_store.rs  api_key_store.rs  attr_index.rs  error_group_store.rs  incident_store.rs  memory.rs  mod.rs  postgres.rs  redis.rs  rollup.rs  slo_store.rs
src/viewer_runtime/: aggregator.rs  compiler.rs  mod.rs  reducer.rs  runtime.rs  state.rs
tests/: e2e.rs  integration.rs
