[package]
edition = "2024"
name = "litelemetry"
repository = "https://github.com/smartcrabai/litelemetry"
version = "0.1.13"

[dependencies]
axum = { features = ["macros"], version = "0.8" }
buffa = "0.5"
bytes = "1"
chrono = { features = ["serde"], version = "0.4" }
connectrpc = { git = "https://github.com/anthropics/connect-rust", rev = "e745db1b2857a32bc379aef574fd7c0b337814d3", features = [
  "axum",
  "server",
] }
flate2 = "1"
hex = "0.4"
http-body = "1"
lz4_flex = { version = "0.13", default-features = false, features = [
  "frame",
  "std",
] }
redis = { features = ["tokio-comp", "streams"], version = "1.0" }
regex = "1"
reqwest = { features = [
  "json",
  "rustls",
  "rustls-native-certs",
], default-features = false, version = "0.13" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
sha2 = "0.11"
snap = "1"
thiserror = "2"
tokio = { features = ["full"], version = "1" }
tracing = "0.1"
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
uuid = { features = ["v4", "serde"], version = "1" }
zstd = "0.13"

[dependencies.sqlx]
features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"]
version = "0.8"

[build-dependencies]
connectrpc-build = { git = "https://github.com/anthropics/connect-rust", rev = "e745db1b2857a32bc379aef574fd7c0b337814d3" }

[dev-dependencies]
opentelemetry = "=0.32.0"
opentelemetry-otlp = { features = [
  "http-proto",
  "grpc-tonic",
], version = "=0.32.0" }
testcontainers = "=0.27.3"
tower = "=0.5.3"

[dev-dependencies.opentelemetry_sdk]
features = ["trace", "metrics", "logs"]
version = "=0.32.0"

[dev-dependencies.testcontainers-modules]
features = ["redis", "postgres"]
version = "=0.15.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
